# backend/models/setting.js
@@ -3,11 +3,12 @@ var mongoose = require('mongoose');
 Schema = mongoose.Schema;
 
 const SettingSchema = mongoose.Schema({
-  
-    banner1: { type: String },
-    banner2: { type: String },
-    banner3: { type: String },
-    banner4: { type: String },
+    name: { type: String },
+    banner_type: { type: String },
+    banner_url: { type: String },
+    created_by: { type: Schema.Types.ObjectId, ref: 'Users' }
+}, {
+    timestamps: true
 });
 
 module.exports = mongoose.model('Setting', SettingSchema);
